--- a/SelfProgress/SelfProgress.csproj
+++ b/SelfProgress/SelfProgress.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HomeWork2\HomeWork2.csproj" />
+  </ItemGroup>
+
 </Project>
