Completed task on calculating Square parameters & completed Arithmetic Progression task (finding N element, finding sum & finding average)

--- a/SelfProgress/SelfProgress.csproj
+++ b/SelfProgress/SelfProgress.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HomeWork3_Square\HWSquare.csproj" />
     <ProjectReference Include="..\ThirdTask\ThirdTask.csproj" />
   </ItemGroup>
 
